# python-algorithms

./: .gitignore  LICENSE  README.md  pyproject.toml
src/algorithms/: cli.py  misc.py  search.py  sorter.py
src/datastructures/: basic.py
tests/: test_basic.py  test_search.py  test_sorter.py
